# mit-cancer-navigator

./: .env.example  .gitattributes  .gitignore  .vercelignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_USAGE.md  LICENSE  PASS_TO_AGENT.playbook.md  PROJECT_MEMORY.md  PROJECT_PLAN.md  README.md  ROADMAP.md  SETUP_PROJECT_FIT_REVIEW.playbook.md  STARTUP_CHECKLIST.md  VERSION.json  mcp.json  package-lock.json  package.json
apps/api/: .vercelignore  alembic.ini  pyproject.toml  requirements.txt  vercel.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260228_0001_initial.py  20260302_0002_import_batches.py  20260309_0003_semantic_runtime.py  20260401_0004_rulesets_rls.py
apps/api/api/: index.py
apps/api/app/: __init__.py  main.py
apps/api/app/config/: settings.py  versioning.py
apps/api/app/domain/: contracts.py  rules.py
apps/api/app/observability/: tracing.py
apps/api/app/repositories/: __init__.py  bootstrap.py  corpus_store.py  db.py  models.py  run_store.py  semantic_store.py
apps/api/app/schemas/: contracts.py
apps/api/app/services/: analysis_service.py  evaluation_service.py  governance_service.py  import_pipeline.py  llm_explainability_service.py  runtime_prewarm_service.py  (+2 more)
apps/api/tests/: test_bootstrap_database.py  test_domain_logic.py  test_evals_cached_route.py  test_evaluation_service.py  test_frozen_benchmark_pack.py  test_import_pipeline.py  test_imports_prewarm_route.py  test_llm_explainability.py  test_main_runtime_prewarm.py  test_runs_explainability_route.py  test_semantic_retrieval.py  test_versioning.py
(+115 files in other folders)
