[project]
name = "navigator-api"
version = "0.2.0"
description = "FastAPI API for the Lung Cancer Treatment Navigator"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.2",
  "dramatiq>=1.17.0",
  "redis>=5.0.8",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools]
packages = ["app"]
